Доработки по фронту

--- a/BusinessCardProject/Client/BusinessCardProject.Client/wwwroot/index.html
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/wwwroot/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BusinessCardProject.Client</title>
+    <!-- Для SEO-оптимизации -->
+    <meta name="description" content="Учебные материалы по C#, разработке приложений и веб-приложений. Видеоуроки и статьи для начинающих и опытных разработчиков. Начни писать на C# легко и понятно!">
+    <meta name="keywords" content="обучение C#, C# для начинающих, уроки C#, разработка приложений на C#, веб-разработка C#, EasyCSharpStart, программирование на C#">
+    <meta name="author" content="EasyCSharpStart">
+    <meta name="robots" content="index, follow">
+    <title>EasyCSharpStart</title>
     <base href="/" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
@@ -26,9 +31,6 @@
     
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-    <script type="text/javascript" id="MathJax-script" async
-            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-    </script>
 </body>
 
 </html>
